5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1716_2499.log
== TEST (2019-05-14 16:55:30) 
-- CODE:
from math import *
k = float(input("Digite o valor de k: "))
cont = 0
soma = k
fat = 1
while(k >= cont):
	soma = soma / factorial(fat)
	fat = fat + 1
	cont + cont + 1
print(round(soma,8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma / factorial(fat)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:55:50) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 0
soma = k
fat = 1
while(k >= cont):
	soma = soma / factorial(fat)
	fat = fat + 1
	cont + cont + 1
print(round(soma,8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma / factorial(fat)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:54) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 0
soma = 0
fact = 1
while(k > cont):
	soma = soma + (1/factorial(d))
	cont = cont + 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (1/factorial(d))
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:12) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 0
soma = 0
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:48) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 0
soma = 0
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:09:08) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 0
soma = 0
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	cont = cont + 1
	fact = fact + 1
print(round(soma,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:24) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 0
soma = 0
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:37) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 0
soma = 0
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:51) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 0
soma = 0
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:11:58) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 1
soma = 0
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
1.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:09) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 1
soma = 0
fact = 1
while(k >= cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:19) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 1
soma = 0
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
1.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:13:44) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 1
soma = 1
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:13:51) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 1
soma = 1
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- EXECUTION TIME:
0.229883
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:51:49) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 1
soma = 1
fact = 1
while(k > cont):
	soma = soma + (cont/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- EXECUTION TIME:
0.172642
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
3.71666667
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
3.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
3.70833333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:51:53) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 1
soma = 1
fact = 1
while(k > cont):
	soma = soma + (cont/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- OUTPUT:
3.71666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:51:59) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 1
soma = 1
fact = 1
while(k > cont):
	soma = soma + (cont/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- EXECUTION TIME:
0.134706
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
3.71666667
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
3.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
3.70833333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:52:10) 
-- CODE:
from math import *
k = int(input("Digite o valor de k: "))
cont = 1
soma = 1
fact = 1
while(k > cont):
	soma = soma + (1/factorial(fact))
	fact = fact + 1
	cont = cont + 1
print(round(soma,8))
-- EXECUTION TIME:
0.168518
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
